# cpp-to-vision-perception-roadmap

./: README.md
C ++/01-temel-cpp/: açıklamalar.ipynb  part-1.cpp  part1.txt
C ++/02-fonksiyon-ve-pointer/: Bölüm 3-4-5.cpp  Main.cpp  açıklamalar.ipynb  part-2.cpp  part2.txt
C ++/02-fonksiyon-ve-pointer/Hücre Kod Blokları/: 01_value_vs_reference.cpp  02_reference_pass.cpp  03_const_reference.cpp  04_pointer_giris.cpp  05_pointer_vs_reference.cpp  06_null_pointer.cpp  07_dangling_pointer.cpp  08_wild_pointer.cpp  09_value_reference_pointer.cpp
C ++/03-pointer-ve-bellek/: acıklamalar.ipynb  part-3.cpp  part3.txt
C ++/03-pointer-ve-bellek/Hücre Kod Blokları/: 01_array_pointer.cpp  02_pointer_to_function.cpp  03_void_pointer.cpp  04_struct_pointer.cpp  05_dynamic_memory.cpp  06_smart_pointer.cpp  07_stack_vs_heap.cpp  0_pointer_aritmetigi.cpp
C ++/04-oop-temelleri/: acıklamalar.ipynb  part-4.cpp  part4.txt
C ++/04-oop-temelleri/Hücre Kod Blokları/: 01_erisim_belirleyici.cpp  02_constructor_fonksiyon.cpp  03_destructor.cpp  04_this_pointer.cpp  05_method_constMethod.cpp  06_encapsulation.cpp  07_struct_vs_class.cpp  08_nesne_yasam_dongusu.cpp  09_static_uyeler.cpp  0_class_object.cpp  10_const_object.cpp  11_friend_fonk.cpp
C ++/05-ileri-oop/: acıklamalar.ipynb  part-5.cpp  part5.txt
C ++/05-ileri-oop/Hücre Kod Blokları/: 01_move_semantics.cpp  02_inheritance.cpp  03_polymorphism.cpp  04_virtual_destructor.cpp  05_abstract_class.cpp  06_multiple_multilevel.cpp  0_compound_assignment.cpp
C ++/06-veri-yapilari/Array ve Dinamik Array/: acıklamalar.ipynb
C ++/06-veri-yapilari/Linked List/: acıklamalar.ipynb
C ++/06-veri-yapilari/Sıralama Algoritmaları/: acıklamalar.ipynb
C ++/07-cpp-kolayliklari/: int_acıklamalar.ipynb  string_acıklamalar.ipynb  vector_acıklamalar.ipynb
C ++/07-cpp-kolayliklari/Algoritma Soruları - ( String )/: 01_string_algoritma.cpp  02_string_algoritma.cpp  03_string_algoritma.cpp  04_string_algoritma.cpp  05_string_algoritma.cpp  06_string_algoritma.cpp  07_string_algoritma.cpp  08_string_algoritma.cpp  09_string_algoritma.cpp  0_string_algoritma.cpp
C ++/07-cpp-kolayliklari/Algoritma Soruları - ( vector )/: 01_vector_algoritma.cpp  02_vector_algoritma.cpp  03_vector_algoritma.cpp  04_vector_algoritma.cpp  05_vector_algoritma.cpp  06_vector_algoritma.cpp  07_vector_algoritma.cpp  08_vector_algoritma.cpp  09_vector_algoritma.cpp  0_vector_algoritma.cpp
C ++/07-cpp-kolayliklari/Algoritma Soruları - ( İnt )/: 01_int_algoritma.cpp  02_int_algoritma.cpp  03_int_algoritma.cpp  04_int_algoritma.cpp  05_int_algoritma.cpp  06_int_algoritma.cpp  07_int_algoritma.cpp  08_int_algoritma.cpp  09_int_algoritma.cpp  0_int_algoritma.cpp
C ++/08-hata-ayiklama-try-catch/: acıklamalar.ipynb
C ++/08-hata-ayiklama-try-catch/Alıstırmalar/: 01_try_catch.cpp  02_try_catch.cpp  03_try_catch.cpp  04_try_catch.cpp  0_try_catch.cpp
C ++/09-cmake/: acıklamalar.ipynb
C ++/09-cmake/Proje_1/: CALIŞTIRMAK_İÇİN.txt  CMakeLists.txt  acıklamalar.ipynb
C ++/09-cmake/Proje_2/: CALIŞTIRMAK_İÇİN.txt  CMakeLists.txt  acıklamalar.ipynb
C ++/09-cmake/Proje_2/include/: math_utils.h
C ++/09-cmake/Proje_2/src/: main.cpp  math_utils.cpp
C ++/09-cmake/Proje_3/: CMakeLists.txt  acıklamalar.ipynb
C ++/09-cmake/Proje_3/lib/: CMakeLists.txt  my_math.cpp  my_math.h
C ++/09-cmake/Proje_3/src/: main.cpp
C ++/09-cmake/Proje_4/: CMakeLists.txt  acıklamalar.ipynb
C ++/09-cmake/Proje_4/src/: main.cpp
C ++/10-opencv/: Bu_Kodlar_Nasıl_Derleniyor.ipynb  acıklamalar_goruntu.ipynb  acıklamalar_video.ipynb
C ++/10-opencv/Alıstırmalar - Goruntu/: 01_opencv.cpp  02_opencv.cpp  03_opencv.cpp  04_opencv.cpp  05_opencv.cpp  06_opencv.cpp  07_opencv.cpp  08_opencv.cpp  09_opencv.cpp  0_opencv.cpp
C ++/10-opencv/Alıstırmalar - Video/: 01_opencv.cpp  02_opencv.cpp  03_opencv.cpp  04_opencv.cpp  05_opencv.cpp  06_opencv.cpp  07_opencv.cpp  08_opencv.cpp  09_opencv.cpp  0_opencv.cpp  10_opencv.cpp
C ++/11-libtorch/: Boyut_Ayarlaması.ipynb  LibTorch_Part_1.ipynb  Main_CPP_Part_1.ipynb  Main_CPP_Part_2.ipynb
C ++/11-libtorch/Uygulama - 1/: CMakeLists.txt  main.cpp  main.ipynb  mini_kart.ipynb  model_ts.pt
C ++/11-libtorch/Uygulama - 2/: main.cpp  main.ipynb  mini_kart.ipynb
C ++/11-libtorch/Uygulama - 3/: CMakeLists.txt  main.cpp  main.ipynb  mini_kart.ipynb
C ++/11-libtorch/Uygulama - 4/: CMakeLists.txt  main.cpp  main.ipynb  mini_kart.ipynb  model.py
C ++/11-libtorch/Uygulama - 5/: main.cpp  main.ipynb  mini_kart.ipynb  model.py
C ++/11-libtorch/Uygulama - 6/: CMakeLists.txt  main.cpp  main.ipynb  mini_kart.ipynb  model.py
C ++/11-libtorch/Uygulama - 7/: main.cpp  (+3 more)
C ++/12-perception-node/: PerceptionNode_Teorik.ipynb  PerceptionNode_iskelet.ipynb
C ++/12-perception-node/Uygulama - 1/: CMakeLists.txt  main.ipynb  main_cpp_acıklamalar.ipynb  perception_node_acıklamalar.ipynb  perception_types_acıklamalar.ipynb
C ++/12-perception-node/Uygulama - 1/src/: main.cpp  perception_node.cpp  perception_node.hpp  perception_types.hpp
C ++/12-perception-node/Uygulama - 3/: CMakeLists.txt  main.ipynb
C ++/12-perception-node/Uygulama - 3/models/: train_models.py
C ++/12-perception-node/Uygulama - 3/src/: classifier_node.cpp  classifier_node.hpp  cıfar10_labels.hpp  frame_types.hpp  main.cpp  preprocess_node.cpp  preprocess_node.hpp
C ++/12-perception-node/Uygulama - 4/: CMakeLists.txt  README.md
C ++/12-perception-node/Uygulama - 4/models/: README_models.txt
C ++/12-perception-node/Uygulama - 4/python/: train_cifar10.py  xray_inspect.py
C ++/12-perception-node/Uygulama - 4/src/: cifar10_labels.hpp  classifier_node.cpp  classifier_node.hpp  frame_types.hpp  main.cpp  preprocess_node.cpp  preprocess_node.hpp
C ++/12-perception-node/Uygulama - 5/: CMakeLists.txt  README.md
C ++/12-perception-node/Uygulama - 5/models/: README_models.txt  model.py
C ++/12-perception-node/Uygulama - 5/src/: detection_types.hpp  draw_utils.cpp  draw_utils.hpp  frame_types.hpp  main.cpp  yolo_inference_node.cpp  yolo_inference_node.hpp  yolo_preprocess_node.cpp  yolo_preprocess_node.hpp
(+47 files in other folders)
